# face-recognition

./: README.md  face_detection.py  facial_recognition.py  haarcascade_phone.xml  pyproject.toml
