[tool.poetry]
name = "astro-cam"
version = "0.1.0"
description = ""
authors = ["Rodrigo Zanel <rodrigozanelsp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
opencv-python = "^4.10.0.84"
dlib = "^19.24.6"
face-recognition = "^1.3.0"
face-recognition-models = "^0.3.0"


[tool.poetry.group.dev.dependencies]
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
